# hotaru

./: .gitignore  .gitmodules  .licensure.yml  Cargo.toml  Makefile  README.md  gst-plugin-gtk4-sources.json  io.github.jeffshee.Hotaru.json  license_header.txt  meson.build  meson_options.txt
data/: io.github.jeffshee.Hotaru.desktop  io.github.jeffshee.Hotaru.gschema.xml  io.github.jeffshee.Hotaru.metainfo.xml  io.github.jeffshee.Hotaru.metainfo.xml.in  io.github.jeffshee.Hotaru.service.in  meson.build
data/icons/: meson.build
docs/: architecture.md  dev.md  renderers.md
examples/: run_clapper.rs  run_clapper_gnome.rs  run_clapper_x11.rs  run_gstgtk4.rs  run_gstgtk4_x11.rs  run_multi_monitor_x11.rs  run_web.rs
examples/config/: clone_single_wallpaper.json  scene_wallpaper.json  stretch_single_wallpaper.json  wallpaper_per_monitor.json  wpe_wallpaper.json
pkgs/flatpak/: clapper.json  glfw.json  glm.json  gst-plugin-gtk4.json  gstreamer.json  gtk4-layer-shell.json  io.github.jeffshee.Hotaru.json  libmpv.json  linux-wallpaperengine.json
po/: POTFILES  meson.build
src/: application.rs  clapper_widget.rs  cli.rs  clip_box.rs  config.rs  constant.rs  constants.rs  dbus.rs  gif_paintable.rs  gst_utils.rs  hotaru.gresource.xml  layout.rs  layout_v2.rs  lib.rs  main.rs  meson.build  model.rs  monitor.rs  monitor_tracker.rs  monitor_watcher.rs  renderer.rs  settings_watcher.rs  state.rs  utils.rs  video_widget.rs  widget.rs  window.rs  window.ui  wpe.rs
src/model/: hanabi_params.rs  hanabi_window_params.rs  launch_mode.rs  monitor.rs  source_config.rs  video_renderer.rs  wallpaper_config.rs  window_layout.rs
src/renderer/: gl_loader.rs  gstgtk4.rs  mpv.rs  scene.rs  web.rs
src/widget/: clapper.rs  clip_box.rs  gstgtk4.rs  mpv.rs  scene.rs  web.rs
