[package]
name = "hotaru"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-io = "2"
clap = { version = "4.5.29", features = ["derive"] }
enum_dispatch = "0.3.13"
gdk-x11 = { version = "0.10", package = "gdk4-x11" }
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
gst = { version = "0.24", package = "gstreamer" }
gst-play = { version = "0.24", package = "gstreamer-play" }
gst-plugin-gtk4 = "0.14"
gst-video = { version = "0.24", package = "gstreamer-video" }
gtk = { version = "0.10", package = "gtk4" }
gtk4-layer-shell = "0.7"
once_cell = "1.21.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webkit = { version = "0.5.0", package = "webkit6" }
x11rb = "0.13.1"
zbus = "5"

[features]
default = ["dmabuf", "gtk_v4_14", "gst_v1_24"]
dmabuf = ["gst-plugin-gtk4/dmabuf"]
gtk_v4_14 = ["gst-plugin-gtk4/gtk_v4_14", "gtk/v4_14"]
gst_v1_24 = ["gst/v1_24", "gst-video/v1_24"]
wayland = ["gst-plugin-gtk4/wayland"]
x11egl = ["gst-plugin-gtk4/x11egl"]
x11glx = ["gst-plugin-gtk4/x11glx"]
