[package]
name = "hotaru"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
async-io = "2.6.0"
clap = { version = "4.5.58", features = ["derive"] }
enum_dispatch = "0.3.13"
gdk-x11 = { version = "0.10.3", package = "gdk4-x11" }
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
gst = { version = "0.24.4", package = "gstreamer" }
gst-play = { version = "0.24.4", package = "gstreamer-play" }
gst-plugin-gtk4 = "0.14.4"
gst-video = { version = "0.24.4", package = "gstreamer-video" }
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_14"] }
gtk4-layer-shell = "0.7.1"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
webkit = { version = "0.5.0", package = "webkit6" }
x11rb = "0.13.2"
zbus = "5.13.2"

[features]
default = [
    "dmabuf",
    "gst_v1_24",
    "wayland",
    "waylandegl",
    "x11egl",
    "x11glx",
]
dmabuf = ["gst-plugin-gtk4/dmabuf"]
gst_v1_24 = ["gst/v1_24", "gst-play/v1_24", "gst-video/v1_24"]
wayland = ["gst-plugin-gtk4/wayland"]
waylandegl = ["gst-plugin-gtk4/waylandegl"]
x11egl = ["gst-plugin-gtk4/x11egl"]
x11glx = ["gst-plugin-gtk4/x11glx"]
