[package]
name = "hotaru"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
async-io = "2.6.0"
clap = { version = "4.5.58", features = ["derive"] }
enum_dispatch = "0.3.13"
gdk-x11 = { version = "0.11.4", package = "gdk4-x11" }
gst = { version = "0.25.3", package = "gstreamer" }
gst-play = { version = "0.25.0", package = "gstreamer-play" }
gst-plugin-gtk4 = "0.15.2"
gst-video = { version = "0.25.0", package = "gstreamer-video" }
gtk = { version = "0.11.4", package = "gtk4", features = ["v4_14"] }
gtk4-layer-shell = "0.8.0"
libc = { version = "0.2.180", optional = true }
libloading = { version = "0.8.9", optional = true }
libmpv2 = { version = "6.0.0", optional = true }
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
webkit = { version = "0.6.1", package = "webkit6" }
x11rb = "0.13.2"
zbus = "5.13.2"

[features]
default = ["base", "mpv"]
# Everything except the optional renderers; build with
# --no-default-features --features base to skip libmpv.
base = [
    "dmabuf",
    "gst_v1_24",
    "wayland",
    "waylandegl",
    "x11egl",
    "x11glx",
]
dmabuf = ["gst-plugin-gtk4/dmabuf"]
gst_v1_24 = ["gst/v1_24", "gst-play/v1_24", "gst-video/v1_24"]
# libmpv-based video renderer. Requires libmpv (client API 2.x) at build
# and run time.
mpv = ["dep:libmpv2", "dep:libloading", "dep:libc", "gdk-x11/v4_4", "gdk-x11/egl"]
wayland = ["gst-plugin-gtk4/wayland"]
waylandegl = ["gst-plugin-gtk4/waylandegl"]
x11egl = ["gst-plugin-gtk4/x11egl"]
x11glx = ["gst-plugin-gtk4/x11glx"]
